@@ -28,7 +28,7 @@ namespace pqxx
 // TODO: Async access to help hide network latencies
 // TODO: Binary COPY
 
-class Transaction;
+class TransactionItf;
 
 
 /// Base class for streaming data to/from database tables.
@@ -36,14 +36,14 @@ class Transaction;
  * table using PostgreSQL's COPY TO STDOUT and COPY FROM STDIN commands,
  * respectively.  These capabilities are implemented by its subclasses 
  * TableReader and TableWriter.
- * A Tablestream exists in the context of a Transaction, and no other streams
- * or queries may be applied to that Transaction as long as the stream remains
+ * A Tablestream exists in the context of a transaction, and no other streams
+ * or queries may be applied to that transaction as long as the stream remains
  * open.
  */
 class PQXX_LIBEXPORT TableStream
 {
 public:
-  TableStream(Transaction &Trans, 
+  TableStream(TransactionItf &Trans, 
 	      PGSTD::string Name, 
 	      PGSTD::string Null=PGSTD::string());			//[t6]
   virtual ~TableStream() =0;						//[t6]
@@ -51,11 +51,11 @@ public:
   PGSTD::string Name() const { return m_Name; }				//[t10]
 
 protected:
-  Transaction &Trans() const { return m_Trans; }
+  TransactionItf &Trans() const { return m_Trans; }
   PGSTD::string NullStr() const { return m_Null; }
 
 private:
-  Transaction &m_Trans;
+  TransactionItf &m_Trans;
   PGSTD::string m_Name;
   PGSTD::string m_Null;
 
