@@ -1,4 +1,11 @@
 2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/result.h:
+  - Changed Tuple constructor arg from Tuple::size_type to Result::size_type
+ include/pqxx/cursor.h, include/tablereader.h, include/tablestream.h,
+ include/tablewriter.h, src/cursor.cxx, src/tablereader.cxx,
+ src/tablestream.cxx, src/tablewriter.cxx:
+  - Constructors now take TransactionItf & instead of Transaction &
+2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
  autogen.sh:
   - Fixed apparent typo (confflags defined, $conf_flags used)
 2002-10-20  J.H.M. Dassen (Ray) <jdassen@debian.org> 
